?               6.4.13
    - Fix SCSI writes with sector sizes larger than 512.
    - Fix 2Gb SD cards being detected as 1Gb


20210810        6.4.12
    - Fix USB disconnect issue when no SD card is installed.

20210628        6.4.11
    - Remove the "Blind Writes" option from scsi2sd-util. The firmware no longer
    requires this option for improved write performance
    - Fix firmware hang if there was no activity for a few minutes

20210508        6.4.4
    - More bug fixes for firmware hanging during read/writes

20210504        6.4.3
    - More bug fixes while writing data.

20210503        6.4.2
    - Bug fix for errors while writing data
    - Fix for scsi2sd-util6 under Windows which may fail to detect a board without a SD card inserted.

20210426		6.4.1
    - 2021 hardware support release.
    - scsi2sd-util6 stability improvements (contributed by Jonathan Wakely.

20201012		6.3.2
	- Increase limit of READ/WRITE BUFFER command for improved compatibility
	SGI Iris hosts
	- Add new config option to enable blind writes to improve SD card write
	performance. This was previously enabled default but causes problems
	with some SCSI hosts.

20200419		6.3.1
	- Added checks to ensure the correct firmware version is loaded.
	V6 Rev.f and older boards need the "firmware.V6.revF.dfu" firmware updates.
	V6 2020c and newer boards need the "firmware.V6.2020.dfu" firmware updates.

20200216		6.3.0
	- Breaking change: Firmware updates on windows now require the UsbDK
	driver to be installed.

	- Fix regression preventing some machines from booting
	- Update libusb to 1.0.23 for dfu-util
	- Modify dfu-util to use the UsbDk driver via libusb.

20200130		6.2.15
	- Fix issue writing more than 512kb of data in one write command
	(bug introduced 6.2.7)
	- Fix possible data corruption bug when reading or writing more than
	64kb per command (fixed in most cases by 6.2.14)

20200101		6.2.14
	- Fix for invalid CDROM READ TOC responses (Thanks Simon Gander)